src/entities/ProductCard/ProductCard.module.scss
@mixin shadow-card {
  box-shadow: var(--card-shadow-hover);
}
@mixin shadow-btn {
  box-shadow: var(--card-shadow);
}

@mixin remove-card-hovering {
  box-shadow: var(--card-shadow);
  transform: none;
}

@mixin static-btn {
  position: static;
  padding: 0 var(--card-padding) toRem(20);
  margin-top: calc(-1 * (var(--card-padding) - toRem(16)));
  border-radius: 0 0 var(--card-border-radius) var(--card-border-radius);
}

@mixin abs-btn {
  position: absolute;
  left: 1px;
  right: 1px;
  z-index: 1;
  border-radius: 0 0 var(--card-border-radius) var(--card-border-radius);
}

.productCard {
  background-color: var(--bg-card-color);
  border: 1px solid var(--card-border-color);
  border-radius: var(--card-border-radius);
  box-shadow: var(--card-shadow);
  transition: transform 0.7s ease, box-shadow 0.7s ease;
  position: relative;

  &:not(.staticOnAll):hover {
    @include shadow-card;
    transform: translateY(-4px);
  }
}

.title {
  font: #{toRem(16)} / 150% var(--font-family-secondary);
  font-weight: 500;
  margin: toRem(6) 0 toRem(10);
}

.btnWrapper {
  background-color: var(--bg-card-color);
  padding-left: toRem(24);
  padding-right: toRem(24);
  padding-bottom: toRem(20);

  .staticOnAll & {
    @include static-btn;
  }
}

.btn {
  margin: auto;
  font-size: toRem(14);
  padding: toRem(8) toRem(16) toRem(10);
}

@include media-desktop {
  .productCard {
    &:not(.staticOnAll),
    &:not(.staticOnMobile),
    &:not(.staticOnTablet) {
      .btnWrapper {
        @include abs-btn;
        top: calc(100% - toRem(24));
        padding-top: toRem(16);
        transform: scaleY(0);
        transition: transform 0.7s ease;
        transform-origin: top;
        z-index: 999;
        @include shadow-btn;

        .btn {
          transform: scale(0);
          transition: transform 0.7s ease;
        }

        &.isShown {
          transform: scaleY(1);

          & > .btn {
            transform: scale(1);
          }
        }
      }
    }

    &.staticOnAll .btnWrapper {
      @include static-btn;
    }
  }
}

@include media-max-tablet-s {
  .productCard.staticOnTablet {
    @include remove-card-hovering;

    .btnWrapper{
      @include static-btn;
    }
  }
}

@include media-max-mobile-s {
  .productCard.staticOnMobile {
    @include remove-card-hovering;
    .btnWrapper{
      @include static-btn;
    }
  }
}

